--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "gatsby-plugin-react-helmet": "^3.1.0",
         "gatsby-plugin-sharp": "^2.2.3",
         "gatsby-source-filesystem": "^2.1.2",
+        "gatsby-transformer-json": "^2.2.2",
         "gatsby-transformer-sharp": "^2.2.1",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
