--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "author": "Kyle Mathews <mathews.kyle@gmail.com>",
     "dependencies": {
         "gatsby": "^2.13.9",
+        "gatsby-background-image": "^0.8.0",
         "gatsby-image": "^2.2.4",
         "gatsby-plugin-react-helmet": "^3.1.0",
         "gatsby-plugin-sharp": "^2.2.3",
         "gatsby-source-filesystem": "^2.1.2",
         "gatsby-transformer-json": "^2.2.2",
         "gatsby-transformer-sharp": "^2.2.1",
+        "intersection-observer": "^0.7.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
-        "react-helmet": "^5.2.1"
+        "react-helmet": "^5.2.1",
+        "styled-components": "^4.3.2"
     },
     "devDependencies": {
         "prettier": "^1.18.2"
