--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "version": "0.1.0",
     "author": "Kyle Mathews <mathews.kyle@gmail.com>",
     "dependencies": {
+        "animate.css": "^3.7.2",
         "gatsby": "^2.13.9",
         "gatsby-background-image": "^0.8.0",
         "gatsby-image": "^2.2.4",
