--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "gatsby-plugin-typography": "^2.3.2",
         "gatsby-source-filesystem": "^2.1.2",
         "gatsby-transformer-json": "^2.2.2",
+        "gatsby-transformer-remark": "^2.6.9",
         "gatsby-transformer-sharp": "^2.2.1",
         "intersection-observer": "^0.7.0",
         "react": "^16.8.6",
