--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "react-dom": "^16.8.6",
         "react-helmet": "^5.2.1",
         "react-icons": "^3.7.0",
+        "react-id-swiper": "^2.3.2",
         "react-typography": "^0.16.19",
+        "swiper": "^4.5.0",
         "typography": "^0.16.19"
     },
     "devDependencies": {
