--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
         "gatsby-transformer-remark": "^2.6.9",
         "gatsby-transformer-sharp": "^2.2.1",
         "intersection-observer": "^0.7.0",
+        "nuka-carousel": "^4.5.9",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-helmet": "^5.2.1",
         "react-icons": "^3.7.0",
-        "react-id-swiper": "^2.3.2",
         "react-typography": "^0.16.19",
-        "swiper": "^4.5.0",
         "typography": "^0.16.19"
     },
     "devDependencies": {
