--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "version": "0.1.0",
     "author": "Kyle Mathews <mathews.kyle@gmail.com>",
     "dependencies": {
+        "@brainhubeu/react-carousel": "^1.10.17",
         "animate.css": "^3.7.2",
         "gatsby": "^2.13.9",
         "gatsby-background-image": "^0.8.0",
@@ -17,7 +18,6 @@
         "gatsby-transformer-remark": "^2.6.9",
         "gatsby-transformer-sharp": "^2.2.1",
         "intersection-observer": "^0.7.0",
-        "nuka-carousel": "^4.5.9",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-helmet": "^5.2.1",
