--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "gatsby": "^2.13.9",
         "gatsby-background-image": "^0.8.0",
         "gatsby-image": "^2.2.4",
+        "gatsby-plugin-manifest": "^2.2.4",
         "gatsby-plugin-react-helmet": "^3.1.0",
         "gatsby-plugin-sharp": "^2.2.3",
         "gatsby-plugin-typography": "^2.3.2",
