Add npm script for testing on local network.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "scripts": {
         "build": "gatsby build",
         "develop": "gatsby develop",
+        "LAN": "echo 'gatsby develop -H 192.168.1.90 -p 8000'",
         "format": "prettier --write src/**/*.{js,jsx}",
         "start": "npm run develop",
         "serve": "gatsby serve",
