--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "version": "0.1.0",
     "author": "Kyle Mathews <mathews.kyle@gmail.com>",
     "dependencies": {
-        "@brainhubeu/react-carousel": "^1.10.17",
         "animate.css": "^3.7.2",
         "gatsby": "^2.13.9",
         "gatsby-background-image": "^0.8.0",
@@ -23,7 +22,9 @@
         "react-dom": "^16.8.6",
         "react-helmet": "^5.2.1",
         "react-icons": "^3.7.0",
+        "react-slick": "^0.24.0",
         "react-typography": "^0.16.19",
+        "slick-carousel": "^1.8.1",
         "typography": "^0.16.19"
     },
     "devDependencies": {
