--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "gatsby-transformer-sharp": "^2.2.1",
         "intersection-observer": "^0.7.0",
         "react": "^16.8.6",
+        "react-aria-menubutton": "^6.1.0",
         "react-dom": "^16.8.6",
         "react-helmet": "^5.2.1",
         "react-icons": "^3.7.0",
