--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     ],
     "license": "MIT",
     "scripts": {
-        "build": "gatsby build",
+        "build": "rm -rf public && gatsby build",
         "develop": "gatsby develop",
-        "deploy": "gatsby build && gh-pages -d public -b master",
+        "deploy": "npm run build && gh-pages -d public -b master",
         "LAN": "echo 'gatsby develop -H LOCAL_IP -p 8000'",
         "format": "prettier --write src/**/*.{js,jsx}",
         "start": "npm run develop",
