--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,6 @@
 {
-    "endOfLine": "lf",
     "semi": false,
     "singleQuote": true,
     "tabWidth": 4,
-    "trailingComma": "es5"
+    "trailingComma": "all"
 }
