--- a/package.json
+++ b/package.json
@@ -1,57 +1,29 @@
 {
-    "name": "gatsby-starter-default",
-    "private": true,
-    "description": "A simple starter to get up and developing quickly with Gatsby",
-    "version": "0.1.0",
-    "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-    "dependencies": {
-        "animate.css": "^3.7.2",
-        "gatsby": "^2.22.9",
-        "gatsby-background-image": "^0.8.7",
-        "gatsby-image": "^2.4.5",
-        "gatsby-plugin-manifest": "^2.4.9",
-        "gatsby-plugin-react-helmet": "^3.3.2",
-        "gatsby-plugin-sharp": "^2.6.9",
-        "gatsby-plugin-typography": "^2.5.2",
-        "gatsby-source-filesystem": "^2.3.8",
-        "gatsby-transformer-json": "^2.4.3",
-        "gatsby-transformer-remark": "^2.8.13",
-        "gatsby-transformer-sharp": "^2.5.3",
-        "hamburgers": "^1.1.3",
-        "intersection-observer": "^0.7.0",
-        "react": "^16.12.0",
-        "react-aria-menubutton": "^6.1.0",
-        "react-dom": "^16.12.0",
-        "react-helmet": "^5.2.1",
-        "react-icons": "^3.7.0",
-        "react-slick": "^0.24.0",
-        "react-typography": "^0.16.19",
-        "slick-carousel": "^1.8.1",
-        "typography": "^0.16.19"
-    },
-    "devDependencies": {
-        "gh-pages": "^2.1.1",
-        "prettier": "^1.18.2"
-    },
-    "keywords": [
-        "gatsby"
-    ],
-    "license": "MIT",
-    "scripts": {
-        "build": "rm -rf public && gatsby build",
-        "develop": "gatsby develop",
-        "deploy": "npm run build && gh-pages -d public -b master",
-        "LAN": "echo 'gatsby develop -H LOCAL_IP -p 8000'",
-        "format": "prettier --write src/**/*.{js,jsx}",
-        "start": "npm run develop",
-        "serve": "gatsby serve",
-        "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-    },
-    "bugs": {
-        "url": "https://github.com/gatsbyjs/gatsby/issues"
-    }
+	"name": "greenheart.github.io",
+	"version": "3.0.0",
+	"author": "Samuel Plumppu",
+	"license": "SEE LICENSE",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Greenheart/greenheart.github.io.git"
+	},
+	"homepage": "https://samuelplumppu.se",
+	"private": true,
+	"scripts": {
+		"start": "svelte-kit dev",
+		"build": "svelte-kit build",
+		"preview": "svelte-kit preview",
+		"lint": "prettier --check --plugin-search-dir=. .",
+		"format": "prettier --write --plugin-search-dir=. ."
+	},
+	"devDependencies": {
+		"@sveltejs/kit": "next",
+		"prettier": "^2.3.0",
+		"prettier-plugin-svelte": "^2.3.0",
+		"svelte": "^3.38.2",
+		"svelte-preprocess": "^4.7.3",
+		"tslib": "^2.2.0",
+		"typescript": "^4.2.4"
+	},
+	"type": "module"
 }
