--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
-	"name": "greenheart.github.io",
-	"version": "3.0.0",
-	"author": "Samuel Plumppu",
-	"license": "SEE LICENSE",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/Greenheart/greenheart.github.io.git"
-	},
-	"homepage": "https://samuelplumppu.se",
-	"private": true,
-	"scripts": {
-		"start": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"preview": "svelte-kit preview",
-		"lint": "prettier --check --plugin-search-dir=. .",
-		"format": "prettier --write --plugin-search-dir=. ."
-	},
-	"devDependencies": {
-		"@sveltejs/kit": "next",
-		"prettier": "^2.3.0",
-		"prettier-plugin-svelte": "^2.3.0",
-		"svelte": "^3.38.2",
-		"svelte-preprocess": "^4.7.3",
-		"tslib": "^2.2.0",
-		"typescript": "^4.2.4"
-	},
-	"type": "module"
+    "name": "greenheart.github.io",
+    "version": "3.0.0",
+    "author": "Samuel Plumppu",
+    "license": "SEE LICENSE",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Greenheart/greenheart.github.io.git"
+    },
+    "homepage": "https://samuelplumppu.se",
+    "private": true,
+    "scripts": {
+        "start": "svelte-kit dev",
+        "build": "svelte-kit build",
+        "preview": "svelte-kit preview",
+        "lint": "prettier --check --plugin-search-dir=. .",
+        "format": "prettier --write --plugin-search-dir=. ."
+    },
+    "devDependencies": {
+        "@sveltejs/kit": "next",
+        "autoprefixer": "^10.2.5",
+        "cssnano": "^5.0.4",
+        "postcss": "^8.3.0",
+        "postcss-load-config": "^3.0.1",
+        "prettier": "^2.3.0",
+        "prettier-plugin-svelte": "^2.3.0",
+        "svelte": "^3.38.2",
+        "svelte-preprocess": "^4.7.3",
+        "tailwindcss": "^2.1.2",
+        "tslib": "^2.2.0",
+        "typescript": "^4.2.4"
+    },
+    "type": "module"
 }
