--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@sveltejs/kit": "next",
         "autoprefixer": "^10.2.5",
         "cssnano": "^5.0.4",
+        "mdsvex": "^0.9.6",
         "postcss": "^8.3.0",
         "postcss-load-config": "^3.0.1",
         "prettier": "^2.3.0",
