--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
         "allowJs": true,
         "checkJs": true,
         "paths": {
-            "$lib/*": ["src/lib/*"]
+            "$lib/*": ["src/lib/*"],
+            "$components/*": ["src/components/*"]
         }
     },
     "include": [
