--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "devDependencies": {
         "@sveltejs/kit": "next",
+        "@tailwindcss/typography": "^0.4.0",
         "autoprefixer": "^10.2.5",
         "cssnano": "^5.0.4",
         "mdsvex": "^0.9.6",
@@ -25,14 +26,12 @@
         "postcss-load-config": "^3.0.1",
         "prettier": "^2.3.0",
         "prettier-plugin-svelte": "^2.3.0",
+        "prism-themes": "^1.7.0",
         "svelte": "^3.38.2",
         "svelte-preprocess": "^4.7.3",
         "tailwindcss": "^2.1.2",
         "tslib": "^2.2.0",
         "typescript": "^4.2.4"
     },
-    "type": "module",
-    "dependencies": {
-        "prism-themes": "^1.7.0"
-    }
+    "type": "module"
 }
