--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
         "tslib": "^2.2.0",
         "typescript": "^4.2.4"
     },
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "svelte-media-query": "^1.0.0"
+    }
 }
