--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,8 @@
         "src/**/*.js",
         "src/**/*.ts",
         "src/**/*.svelte"
+    ],
+    "exclude": [
+        "node_modules"
     ]
 }
