--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "format": "prettier --write --plugin-search-dir=. ."
     },
     "devDependencies": {
+        "@sveltejs/adapter-static": "^1.0.0-next.11",
         "@sveltejs/kit": "next",
         "@tailwindcss/typography": "^0.4.0",
         "autoprefixer": "^10.2.5",
