--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,5 @@
         "src/**/*.ts",
         "src/**/*.svelte"
     ],
-    "exclude": [
-        "node_modules"
-    ]
+    "exclude": ["node_modules"]
 }
