--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "start": "svelte-kit dev",
         "build": "svelte-kit build",
         "preview": "svelte-kit preview",
+        "deploy": "npm run build && gh-pages -d build -b master",
         "lint": "prettier --check --plugin-search-dir=. .",
         "format": "prettier --write --plugin-search-dir=. ."
     },
@@ -22,6 +23,7 @@
         "@tailwindcss/typography": "^0.4.0",
         "autoprefixer": "^10.2.5",
         "cssnano": "^5.0.4",
+        "gh-pages": "^3.1.0",
         "mdsvex": "^0.9.6",
         "postcss": "^8.3.0",
         "postcss-load-config": "^3.0.1",
