--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@sveltejs/adapter-static": "^1.0.0-next.11",
         "@sveltejs/kit": "next",
         "@tailwindcss/typography": "^0.4.0",
+        "@types/lodash-es": "^4.17.4",
         "autoprefixer": "^10.2.5",
         "cssnano": "^5.0.4",
         "gh-pages": "^3.1.0",
@@ -38,6 +39,7 @@
     },
     "type": "module",
     "dependencies": {
+        "lodash-es": "^4.1.1",
         "svelte-icons": "^2.1.0",
         "svelte-media-query": "^1.0.0"
     }
