--- a/package.json
+++ b/package.json
@@ -18,24 +18,24 @@
         "format": "prettier --write --plugin-search-dir=. ."
     },
     "devDependencies": {
-        "@sveltejs/adapter-static": "^1.0.0-next.11",
-        "@sveltejs/kit": "next",
-        "@tailwindcss/typography": "^0.4.0",
+        "@sveltejs/adapter-static": "^1.0.0-next.13",
+        "@sveltejs/kit": "^1.0.0-next.115",
+        "@tailwindcss/typography": "^0.4.1",
         "@types/lodash-es": "^4.17.4",
-        "autoprefixer": "^10.2.5",
-        "cssnano": "^5.0.4",
-        "gh-pages": "^3.1.0",
-        "mdsvex": "^0.9.6",
-        "postcss": "^8.3.0",
-        "postcss-load-config": "^3.0.1",
-        "prettier": "^2.3.0",
+        "autoprefixer": "^10.2.6",
+        "cssnano": "^5.0.6",
+        "gh-pages": "^3.2.1",
+        "mdsvex": "^0.9.7",
+        "postcss": "^8.3.4",
+        "postcss-load-config": "^3.1.0",
+        "prettier": "^2.3.1",
         "prettier-plugin-svelte": "^2.3.0",
         "prism-themes": "^1.7.0",
         "svelte": "^3.38.2",
         "svelte-preprocess": "^4.7.3",
-        "tailwindcss": "^2.1.2",
-        "tslib": "^2.2.0",
-        "typescript": "^4.2.4"
+        "tailwindcss": "^2.1.4",
+        "tslib": "^2.3.0",
+        "typescript": "^4.3.2"
     },
     "type": "module",
     "dependencies": {
