Replace svelte-media-query with native CSS.
My current use case could be solved with less code using native CSS.

--- a/package.json
+++ b/package.json
@@ -36,8 +36,5 @@
         "tslib": "^2.3.0",
         "typescript": "^4.3.5"
     },
-    "type": "module",
-    "dependencies": {
-        "svelte-media-query": "^1.1.1"
-    }
+    "type": "module"
 }
