--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@tailwindcss/typography": "^0.4.1",
         "autoprefixer": "^10.3.1",
         "cssnano": "^5.0.6",
+        "dotenv": "^10.0.0",
         "gh-pages": "^3.2.3",
         "mdsvex": "^0.9.8",
         "postcss": "^8.3.5",
@@ -36,5 +37,8 @@
         "tslib": "^2.3.0",
         "typescript": "^4.3.5"
     },
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "rfc4648": "^1.5.0"
+    }
 }
