--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "moduleResolution": "node",
-        "module": "es2020",
+        "module": "esnext",
         "lib": ["es2020"],
         "target": "es2017",
         /**
@@ -34,5 +34,5 @@
         "src/**/*.ts",
         "src/**/*.svelte"
     ],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "scripts"]
 }
