--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
         "cssnano": "^5.0.6",
         "dotenv": "^10.0.0",
         "gh-pages": "^3.2.3",
+        "gray-matter": "^4.0.3",
         "mdsvex": "^0.9.8",
         "postcss": "^8.3.5",
         "postcss-load-config": "^3.1.0",
         "prettier": "^2.3.2",
         "prettier-plugin-svelte": "^2.3.1",
         "prism-themes": "^1.8.0",
+        "reading-time": "^1.3.0",
         "svelte": "^3.38.3",
         "svelte-preprocess": "^4.7.4",
         "tailwindcss": "^2.2.4",
