--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "postcss": "^8.3.6",
         "postcss-load-config": "^3.1.0",
         "prettier": "^2.3.2",
+        "prettier-plugin-jsdoc": "^0.3.23",
         "prettier-plugin-svelte": "^2.3.1",
         "prism-themes": "^1.8.0",
         "svelte": "^3.41.0",
