--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "private": true,
     "scripts": {
         "start": "svelte-kit dev",
-        "build": "svelte-kit build && touch build/.nojekyll",
+        "build": "svelte-kit build && node scripts/postbuild.js",
         "preview": "svelte-kit preview",
         "deploy": "npm run build && gh-pages -d build -b master -t",
         "lint": "prettier --check --plugin-search-dir=. .",
@@ -24,6 +24,7 @@
         "autoprefixer": "^10.3.1",
         "cssnano": "^5.0.7",
         "dotenv": "^10.0.0",
+        "fs-extra": "^10.0.0",
         "gh-pages": "^3.2.3",
         "gray-matter": "^4.0.3",
         "mdsvex": "^0.9.8",
