Separate data from UI component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
         "checkJs": true,
         "paths": {
             "$lib/*": ["src/lib/*"],
+            "$data/*": ["src/data/*"],
             "$components/*": ["src/components/*"]
         }
     },
