--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     },
     "devDependencies": {
         "@sveltejs/adapter-static": "^1.0.0-next.13",
-        "@sveltejs/kit": "^1.0.0-next.138",
+        "@sveltejs/kit": "^1.0.0-next.139",
         "@tailwindcss/typography": "^0.4.1",
         "autoprefixer": "^10.3.1",
+        "clipboardy": "^2.3.0",
         "cssnano": "^5.0.7",
         "dotenv": "^10.0.0",
         "fs-extra": "^10.0.0",
