--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "private": true,
     "scripts": {
         "dev": "svelte-kit dev",
-        "build": "svelte-kit build && node scripts/postbuild.js",
+        "build": "svelte-kit build",
         "preview": "svelte-kit preview",
         "deploy": "npm run build && gh-pages -d build -b master -t",
         "lint": "prettier --check --plugin-search-dir=. .",
