--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+    "extends": "./.svelte-kit/tsconfig.json",
     "compilerOptions": {
         "moduleResolution": "node",
         "module": "esnext",
@@ -24,6 +25,7 @@
         "allowJs": true,
         "checkJs": true,
         "paths": {
+            "$lib": ["src/lib"],
             "$lib/*": ["src/lib/*"],
             "$data/*": ["src/data/*"],
             "$components/*": ["src/components/*"]
