--- a/_app/manifest.json
+++ b/_app/manifest.json
@@ -1,10 +1,10 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-c6017d27.js",
+    "file": "start-393c5872.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-95479843.js"
+      "_index-419acfd0.js"
     ],
     "dynamicImports": [
       "src/routes/__layout.svelte",
@@ -19,146 +19,164 @@
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-c731519f.js",
+    "file": "pages/__layout.svelte-8a0993ff.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-95479843.js",
-      "_constants-051b5a2a.js",
-      "_Link-6777b0e1.js"
+      "_index-419acfd0.js",
+      "_constants-662300d2.js",
+      "_Link-c8a67cdb.js",
+      "_utils-a0fbfa6c.js"
     ],
     "css": [
-      "assets/pages/__layout.svelte-8c78c488.css"
+      "assets/pages/__layout.svelte-4e82ac8f.css"
     ]
   },
   ".svelte-kit/runtime/components/error.svelte": {
-    "file": "error.svelte-6932e3c0.js",
+    "file": "error.svelte-c882ce79.js",
     "src": ".svelte-kit/runtime/components/error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-95479843.js"
+      "_index-419acfd0.js"
     ]
   },
   "src/routes/blog/automatic-internal-external-links-in-sveltekit.md": {
-    "file": "pages/blog/automatic-internal-external-links-in-sveltekit.md-2a76ee3d.js",
+    "file": "pages/blog/automatic-internal-external-links-in-sveltekit.md-6e7e1f01.js",
     "src": "src/routes/blog/automatic-internal-external-links-in-sveltekit.md",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-95479843.js",
-      "__post-e7a8c627.js",
-      "_constants-051b5a2a.js",
-      "_Tags-2078939d.js"
+      "_index-419acfd0.js",
+      "__post-a47858e9.js",
+      "_constants-662300d2.js",
+      "_Tags-f86444bb.js",
+      "_utils-a0fbfa6c.js",
+      "_Link-c8a67cdb.js"
     ]
   },
   "src/routes/blog/firefox-bookmark-keywords.md": {
-    "file": "pages/blog/firefox-bookmark-keywords.md-ca3854ba.js",
+    "file": "pages/blog/firefox-bookmark-keywords.md-44a3abb6.js",
     "src": "src/routes/blog/firefox-bookmark-keywords.md",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-95479843.js",
-      "__post-e7a8c627.js",
-      "_constants-051b5a2a.js",
-      "_Tags-2078939d.js"
+      "_index-419acfd0.js",
+      "__post-a47858e9.js",
+      "_constants-662300d2.js",
+      "_Tags-f86444bb.js",
+      "_utils-a0fbfa6c.js",
+      "_Link-c8a67cdb.js"
     ]
   },
   "src/routes/blog/generate-password-in-browser-web-crypto-api.md": {
-    "file": "pages/blog/generate-password-in-browser-web-crypto-api.md-97f6fd98.js",
+    "file": "pages/blog/generate-password-in-browser-web-crypto-api.md-e7dd3a2e.js",
     "src": "src/routes/blog/generate-password-in-browser-web-crypto-api.md",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-95479843.js",
-      "__post-e7a8c627.js",
-      "_Link-6777b0e1.js",
-      "_constants-051b5a2a.js",
-      "_Tags-2078939d.js"
+      "_index-419acfd0.js",
+      "__post-a47858e9.js",
+      "_Link-c8a67cdb.js",
+      "_constants-662300d2.js",
+      "_Tags-f86444bb.js",
+      "_utils-a0fbfa6c.js"
     ]
   },
   "src/routes/blog/git-rewrite-commit-email.md": {
-    "file": "pages/blog/git-rewrite-commit-email.md-69ef777f.js",
+    "file": "pages/blog/git-rewrite-commit-email.md-4b36241a.js",
     "src": "src/routes/blog/git-rewrite-commit-email.md",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-95479843.js",
-      "__post-e7a8c627.js",
-      "_Link-6777b0e1.js",
-      "_constants-051b5a2a.js",
-      "_Tags-2078939d.js"
+      "_index-419acfd0.js",
+      "__post-a47858e9.js",
+      "_Link-c8a67cdb.js",
+      "_constants-662300d2.js",
+      "_Tags-f86444bb.js",
+      "_utils-a0fbfa6c.js"
     ]
   },
   "src/routes/blog/index.svelte": {
-    "file": "pages/blog/index.svelte-ea51a32b.js",
+    "file": "pages/blog/index.svelte-17ce815c.js",
     "src": "src/routes/blog/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-95479843.js",
-      "_PostListing-26634e2e.js",
-      "_Tags-2078939d.js"
+      "_index-419acfd0.js",
+      "_PostListing-4f84d8bd.js",
+      "_Tags-f86444bb.js",
+      "_utils-a0fbfa6c.js"
     ]
   },
   "src/routes/blog/nodejs-rename-file-extensions.md": {
-    "file": "pages/blog/nodejs-rename-file-extensions.md-decf67be.js",
+    "file": "pages/blog/nodejs-rename-file-extensions.md-e2410e10.js",
     "src": "src/routes/blog/nodejs-rename-file-extensions.md",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-95479843.js",
-      "__post-e7a8c627.js",
-      "_constants-051b5a2a.js",
-      "_Tags-2078939d.js"
+      "_index-419acfd0.js",
+      "__post-a47858e9.js",
+      "_constants-662300d2.js",
+      "_Tags-f86444bb.js",
+      "_utils-a0fbfa6c.js",
+      "_Link-c8a67cdb.js"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-3e2e61a4.js",
+    "file": "pages/index.svelte-79433577.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-95479843.js",
-      "_PostListing-26634e2e.js",
-      "_Tags-2078939d.js"
+      "_index-419acfd0.js",
+      "_Link-c8a67cdb.js",
+      "_PostListing-4f84d8bd.js",
+      "_utils-a0fbfa6c.js",
+      "_Tags-f86444bb.js"
     ]
   },
-  "_index-95479843.js": {
-    "file": "chunks/index-95479843.js"
+  "_index-419acfd0.js": {
+    "file": "chunks/index-419acfd0.js"
   },
-  "_constants-051b5a2a.js": {
-    "file": "chunks/constants-051b5a2a.js"
+  "_constants-662300d2.js": {
+    "file": "chunks/constants-662300d2.js"
   },
-  "_Link-6777b0e1.js": {
-    "file": "chunks/Link-6777b0e1.js",
+  "_Link-c8a67cdb.js": {
+    "file": "chunks/Link-c8a67cdb.js",
     "imports": [
-      "_index-95479843.js"
+      "_index-419acfd0.js",
+      "_utils-a0fbfa6c.js"
     ]
   },
-  "__post-e7a8c627.js": {
-    "file": "chunks/_post-e7a8c627.js",
+  "_utils-a0fbfa6c.js": {
+    "file": "chunks/utils-a0fbfa6c.js"
+  },
+  "__post-a47858e9.js": {
+    "file": "chunks/_post-a47858e9.js",
     "imports": [
-      "_index-95479843.js",
-      "_constants-051b5a2a.js",
-      "_Tags-2078939d.js"
+      "_index-419acfd0.js",
+      "_constants-662300d2.js",
+      "_Tags-f86444bb.js",
+      "_Link-c8a67cdb.js"
     ],
     "css": [
       "assets/_post-f6e75582.css"
     ]
   },
-  "_Tags-2078939d.js": {
-    "file": "chunks/Tags-2078939d.js",
+  "_Tags-f86444bb.js": {
+    "file": "chunks/Tags-f86444bb.js",
     "imports": [
-      "_index-95479843.js"
+      "_index-419acfd0.js",
+      "_utils-a0fbfa6c.js"
     ]
   },
-  "_PostListing-26634e2e.js": {
-    "file": "chunks/PostListing-26634e2e.js",
+  "_PostListing-4f84d8bd.js": {
+    "file": "chunks/PostListing-4f84d8bd.js",
     "imports": [
-      "_index-95479843.js",
-      "_Tags-2078939d.js"
+      "_index-419acfd0.js",
+      "_Tags-f86444bb.js"
     ]
   }
 }
