--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "prettier-plugin-jsdoc": "^0.3.38",
         "prettier-plugin-svelte": "^2.7.0",
         "prism-themes": "^1.9.0",
+        "qrcode": "^1.5.0",
         "svelte": "^3.48.0",
         "svelte-preprocess": "^4.10.6",
         "tailwindcss": "^3.0.24",
