--- a/_app/manifest.json
+++ b/_app/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-393c5872.js",
+    "file": "start-bf4d44ba.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
@@ -9,28 +9,30 @@
     "dynamicImports": [
       "src/routes/__layout.svelte",
       ".svelte-kit/runtime/components/error.svelte",
+      "src/routes/about.svelte",
       "src/routes/blog/automatic-internal-external-links-in-sveltekit.md",
       "src/routes/blog/firefox-bookmark-keywords.md",
       "src/routes/blog/generate-password-in-browser-web-crypto-api.md",
       "src/routes/blog/git-rewrite-commit-email.md",
       "src/routes/blog/index.svelte",
       "src/routes/blog/nodejs-rename-file-extensions.md",
-      "src/routes/index.svelte"
+      "src/routes/index.svelte",
+      "src/routes/qr.svelte"
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-8a0993ff.js",
+    "file": "pages/__layout.svelte-6bd74732.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_index-419acfd0.js",
-      "_constants-662300d2.js",
-      "_Link-c8a67cdb.js",
+      "_constants-fb6fef14.js",
+      "_Link-1be3b9b3.js",
       "_utils-a0fbfa6c.js"
     ],
     "css": [
-      "assets/pages/__layout.svelte-4e82ac8f.css"
+      "assets/pages/__layout.svelte-d1c04375.css"
     ]
   },
   ".svelte-kit/runtime/components/error.svelte": {
@@ -42,58 +44,69 @@
       "_index-419acfd0.js"
     ]
   },
+  "src/routes/about.svelte": {
+    "file": "pages/about.svelte-c3f12963.js",
+    "src": "src/routes/about.svelte",
+    "isEntry": true,
+    "isDynamicEntry": true,
+    "imports": [
+      "_index-419acfd0.js",
+      "_Link-1be3b9b3.js",
+      "_utils-a0fbfa6c.js"
+    ]
+  },
   "src/routes/blog/automatic-internal-external-links-in-sveltekit.md": {
-    "file": "pages/blog/automatic-internal-external-links-in-sveltekit.md-6e7e1f01.js",
+    "file": "pages/blog/automatic-internal-external-links-in-sveltekit.md-05281607.js",
     "src": "src/routes/blog/automatic-internal-external-links-in-sveltekit.md",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_index-419acfd0.js",
-      "__post-a47858e9.js",
-      "_constants-662300d2.js",
+      "__post-cce714e6.js",
+      "_constants-fb6fef14.js",
       "_Tags-f86444bb.js",
       "_utils-a0fbfa6c.js",
-      "_Link-c8a67cdb.js"
+      "_Link-1be3b9b3.js"
     ]
   },
   "src/routes/blog/firefox-bookmark-keywords.md": {
-    "file": "pages/blog/firefox-bookmark-keywords.md-44a3abb6.js",
+    "file": "pages/blog/firefox-bookmark-keywords.md-07fefe69.js",
     "src": "src/routes/blog/firefox-bookmark-keywords.md",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_index-419acfd0.js",
-      "__post-a47858e9.js",
-      "_constants-662300d2.js",
+      "__post-cce714e6.js",
+      "_constants-fb6fef14.js",
       "_Tags-f86444bb.js",
       "_utils-a0fbfa6c.js",
-      "_Link-c8a67cdb.js"
+      "_Link-1be3b9b3.js"
     ]
   },
   "src/routes/blog/generate-password-in-browser-web-crypto-api.md": {
-    "file": "pages/blog/generate-password-in-browser-web-crypto-api.md-e7dd3a2e.js",
+    "file": "pages/blog/generate-password-in-browser-web-crypto-api.md-f36e2907.js",
     "src": "src/routes/blog/generate-password-in-browser-web-crypto-api.md",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_index-419acfd0.js",
-      "__post-a47858e9.js",
-      "_Link-c8a67cdb.js",
-      "_constants-662300d2.js",
+      "__post-cce714e6.js",
+      "_Link-1be3b9b3.js",
+      "_constants-fb6fef14.js",
       "_Tags-f86444bb.js",
       "_utils-a0fbfa6c.js"
     ]
   },
   "src/routes/blog/git-rewrite-commit-email.md": {
-    "file": "pages/blog/git-rewrite-commit-email.md-4b36241a.js",
+    "file": "pages/blog/git-rewrite-commit-email.md-7ab6a4ae.js",
     "src": "src/routes/blog/git-rewrite-commit-email.md",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_index-419acfd0.js",
-      "__post-a47858e9.js",
-      "_Link-c8a67cdb.js",
-      "_constants-662300d2.js",
+      "__post-cce714e6.js",
+      "_Link-1be3b9b3.js",
+      "_constants-fb6fef14.js",
       "_Tags-f86444bb.js",
       "_utils-a0fbfa6c.js"
     ]
@@ -111,40 +124,52 @@
     ]
   },
   "src/routes/blog/nodejs-rename-file-extensions.md": {
-    "file": "pages/blog/nodejs-rename-file-extensions.md-e2410e10.js",
+    "file": "pages/blog/nodejs-rename-file-extensions.md-6c833616.js",
     "src": "src/routes/blog/nodejs-rename-file-extensions.md",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_index-419acfd0.js",
-      "__post-a47858e9.js",
-      "_constants-662300d2.js",
+      "__post-cce714e6.js",
+      "_constants-fb6fef14.js",
       "_Tags-f86444bb.js",
       "_utils-a0fbfa6c.js",
-      "_Link-c8a67cdb.js"
+      "_Link-1be3b9b3.js"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-79433577.js",
+    "file": "pages/index.svelte-adaf55ee.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_index-419acfd0.js",
-      "_Link-c8a67cdb.js",
+      "_Link-1be3b9b3.js",
       "_PostListing-4f84d8bd.js",
       "_utils-a0fbfa6c.js",
       "_Tags-f86444bb.js"
     ]
   },
+  "src/routes/qr.svelte": {
+    "file": "pages/qr.svelte-e7b40aa5.js",
+    "src": "src/routes/qr.svelte",
+    "isEntry": true,
+    "isDynamicEntry": true,
+    "imports": [
+      "_index-419acfd0.js",
+      "_Link-1be3b9b3.js",
+      "_constants-fb6fef14.js",
+      "_utils-a0fbfa6c.js"
+    ]
+  },
   "_index-419acfd0.js": {
     "file": "chunks/index-419acfd0.js"
   },
-  "_constants-662300d2.js": {
-    "file": "chunks/constants-662300d2.js"
+  "_constants-fb6fef14.js": {
+    "file": "chunks/constants-fb6fef14.js"
   },
-  "_Link-c8a67cdb.js": {
-    "file": "chunks/Link-c8a67cdb.js",
+  "_Link-1be3b9b3.js": {
+    "file": "chunks/Link-1be3b9b3.js",
     "imports": [
       "_index-419acfd0.js",
       "_utils-a0fbfa6c.js"
@@ -153,13 +178,13 @@
   "_utils-a0fbfa6c.js": {
     "file": "chunks/utils-a0fbfa6c.js"
   },
-  "__post-a47858e9.js": {
-    "file": "chunks/_post-a47858e9.js",
+  "__post-cce714e6.js": {
+    "file": "chunks/_post-cce714e6.js",
     "imports": [
       "_index-419acfd0.js",
-      "_constants-662300d2.js",
+      "_constants-fb6fef14.js",
       "_Tags-f86444bb.js",
-      "_Link-c8a67cdb.js"
+      "_Link-1be3b9b3.js"
     ],
     "css": [
       "assets/_post-f6e75582.css"
