--- a/package.json
+++ b/package.json
@@ -10,38 +10,39 @@
     "homepage": "https://samuelplumppu.se",
     "private": true,
     "scripts": {
-        "dev": "svelte-kit dev",
-        "build": "svelte-kit build",
+        "dev": "vite dev",
+        "build": "vite build",
         "postbuild": "node scripts/postbuild.js",
-        "preview": "svelte-kit preview",
+        "preview": "vite preview",
         "deploy": "npm run build && gh-pages -d build -b master -t",
         "lint": "prettier --check --plugin-search-dir=. .",
         "format": "prettier --write --plugin-search-dir=. ."
     },
     "devDependencies": {
-        "@sveltejs/adapter-static": "^1.0.0-next.34",
-        "@sveltejs/kit": "^1.0.0-next.347",
-        "@tailwindcss/typography": "^0.5.2",
-        "autoprefixer": "^10.4.7",
+        "@sveltejs/adapter-static": "^1.0.0-next.48",
+        "@sveltejs/kit": "^1.0.0-next.544",
+        "@tailwindcss/typography": "^0.5.8",
+        "autoprefixer": "^10.4.13",
         "clipboardy": "^3.0.0",
-        "cssnano": "^5.1.10",
-        "dotenv": "^16.0.1",
+        "cssnano": "^5.1.14",
+        "dotenv": "^16.0.3",
         "gh-pages": "^4.0.0",
         "gray-matter": "^4.0.3",
         "mdsvex": "^0.10.6",
-        "postcss": "^8.4.14",
-        "postcss-load-config": "^3.1.4",
-        "prettier": "^2.6.2",
-        "prettier-plugin-jsdoc": "^0.3.38",
-        "prettier-plugin-svelte": "^2.7.0",
+        "postcss": "^8.4.19",
+        "postcss-load-config": "^4.0.1",
+        "prettier": "^2.7.1",
+        "prettier-plugin-jsdoc": "^0.4.2",
+        "prettier-plugin-svelte": "^2.8.0",
         "prism-themes": "^1.9.0",
-        "qrcode": "^1.5.0",
-        "svelte": "^3.48.0",
-        "svelte-preprocess": "^4.10.6",
-        "tailwindcss": "^3.0.24",
+        "qrcode": "^1.5.1",
+        "svelte": "^3.53.1",
+        "svelte-preprocess": "^4.10.7",
+        "tailwindcss": "^3.2.4",
         "title-case": "^3.0.3",
-        "tslib": "^2.4.0",
-        "typescript": "^4.7.2"
+        "tslib": "^2.4.1",
+        "typescript": "^4.8.4",
+        "vite": "^3.2.3"
     },
     "type": "module",
     "dependencies": {
