--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
         "format": "prettier --write --plugin-search-dir=. ."
     },
     "devDependencies": {
-        "@sveltejs/adapter-static": "^1.0.0-next.48",
-        "@sveltejs/kit": "^1.0.0-next.544",
+        "@sveltejs/adapter-static": "^1.0.0",
+        "@sveltejs/kit": "^1.0.1",
         "@tailwindcss/typography": "^0.5.8",
         "autoprefixer": "^10.4.13",
         "clipboardy": "^3.0.0",
@@ -29,20 +29,19 @@
         "gh-pages": "^4.0.0",
         "gray-matter": "^4.0.3",
         "mdsvex": "^0.10.6",
-        "postcss": "^8.4.19",
+        "postcss": "^8.4.20",
         "postcss-load-config": "^4.0.1",
-        "prettier": "^2.7.1",
+        "prettier": "^2.8.1",
         "prettier-plugin-jsdoc": "^0.4.2",
-        "prettier-plugin-svelte": "^2.8.0",
+        "prettier-plugin-svelte": "^2.9.0",
         "prism-themes": "^1.9.0",
         "qrcode": "^1.5.1",
-        "svelte": "^3.53.1",
-        "svelte-preprocess": "^4.10.7",
+        "svelte": "^3.55.0",
         "tailwindcss": "^3.2.4",
         "title-case": "^3.0.3",
         "tslib": "^2.4.1",
-        "typescript": "^4.8.4",
-        "vite": "^3.2.3"
+        "typescript": "^4.9.4",
+        "vite": "^4.0.3"
     },
     "type": "module",
     "dependencies": {
