--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,14 @@
 {
     "extends": "./.svelte-kit/tsconfig.json",
     "compilerOptions": {
-        "moduleResolution": "node",
-        "module": "esnext",
-        "lib": ["es2020"],
-        "target": "es2017",
-        /**
-			svelte-preprocess cannot figure out whether you have a value or a type, so tell TypeScript
-			to enforce using \`import type\` instead of \`import\` for Types.
-			*/
-        "importsNotUsedAsValues": "error",
-        "isolatedModules": true,
-        "resolveJsonModule": true,
-        /**
-			To have warnings/errors of the Svelte compiler at the correct position,
-			enable source maps by default.
-			*/
-        "sourceMap": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true,
-        "baseUrl": ".",
-        "strict": true,
         "allowJs": true,
         "checkJs": true,
-        "paths": {
-            "$lib": ["src/lib"],
-            "$lib/*": ["src/lib/*"],
-            "$data/*": ["src/data/*"],
-            "$components/*": ["src/components/*"]
-        }
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "resolveJsonModule": true,
+        "skipLibCheck": true,
+        "sourceMap": true,
+        "strict": true
     },
     "include": [
         "src/**/*.d.ts",
