--- a/package.json
+++ b/package.json
@@ -46,5 +46,11 @@
     "type": "module",
     "dependencies": {
         "rfc4648": "^1.5.2"
+    },
+    "prettier": {
+        "semi": false,
+        "singleQuote": true,
+        "tabWidth": 4,
+        "trailingComma": "all"
     }
 }
