--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
         "build": "vite build",
         "preview": "vite preview",
         "gh-pages": "pnpm run build && gh-pages -d build -b master -t",
-        "lint": "prettier --check --plugin-search-dir=. .",
-        "format": "prettier --write --plugin-search-dir=. ."
+        "lint": "prettier --check .",
+        "format": "prettier --write ."
     },
     "devDependencies": {
         "@sveltejs/adapter-static": "^2.0.3",
@@ -50,6 +50,11 @@
     "prettier": {
         "semi": false,
         "singleQuote": true,
-        "tabWidth": 4
+        "tabWidth": 4,
+        "trailingComma": "all",
+        "plugins": [
+            "prettier-plugin-svelte",
+            "prettier-plugin-jsdoc"
+        ]
     }
 }
