--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
         "prism-themes": "^1.9.0",
         "qrcode": "^1.5.4",
         "svelte": "^5.26.2",
-        "tailwindcss": "^3.4.17",
+        "tailwindcss": "^4.1.3",
         "title-case": "^4.3.2",
         "tslib": "^2.8.1",
         "typescript": "^5.8.3",
-        "vite": "^6.2.6"
+        "vite": "^6.2.6",
+        "@tailwindcss/vite": "^4.1.3"
     },
     "type": "module",
     "dependencies": {
