Fix #45 - Use simpler base64 stringification and parsing

--- a/package.json
+++ b/package.json
@@ -43,9 +43,7 @@
         "vite": "^7.0.5"
     },
     "type": "module",
-    "dependencies": {
-        "rfc4648": "^1.5.4"
-    },
+    "dependencies": {},
     "prettier": {
         "semi": false,
         "singleQuote": true,
