Fix #51 - Make tech tabs accessible by allowing keyboard interactions.
Also update component to use Svelte 5 to benefit from better animations and the new global modifier for transitions

--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
             "@tailwindcss/oxide",
             "esbuild"
         ]
+    },
+    "dependencies": {
+        "bits-ui": "^2.9.4"
     }
 }
