WIP: Try to get metadata title to update for all page navigations, and update markdown rendering

--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
         "@types/node": "^24.3.0",
         "clipboardy": "^4.0.0",
         "gh-pages": "^6.3.0",
-        "gray-matter": "^4.0.3",
         "mdsvex": "^0.12.6",
         "prettier": "^3.6.2",
         "prettier-plugin-jsdoc": "^1.3.3",
@@ -62,6 +61,7 @@
         ]
     },
     "dependencies": {
-        "bits-ui": "^2.9.4"
+        "bits-ui": "^2.9.4",
+        "svelte-meta-tags": "^4.4.0"
     }
 }
